fixed horizontal scroll for small view 1024px aligned list items globally for cards

--- a/core/src/Card/Card.less
+++ b/core/src/Card/Card.less
@@ -5,7 +5,7 @@
   border: solid 1px rgba(26, 32, 44, 0.12);
   background-color: #ffffff;
   margin: 16px;
-  svg{
+  svg {
     margin-right: 8px;
   }
 }
@@ -16,12 +16,11 @@
 
 .CardContent {
   flex: 1;
-  padding: 10px 25px;
-  ul {
-    padding-left: 10px;
-  }
+  padding: 10px 20px;
+
   ul li {
     list-style-type: circle;
+    list-style-position: inside;
     padding: 3px 0;
   }
 }
