--- a/core/src/Textarea/Textarea.less
+++ b/core/src/Textarea/Textarea.less
@@ -3,7 +3,7 @@
 
 .Textarea {
   min-height: 100px;
-  min-width: 30rem;
+
 
   border-radius: 3px;
   border: solid 1px rgba(26, 32, 44, 0.12);
